--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Redux Practice with React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -16,8 +19,9 @@
   "bugs": {
     "url": "https://github.com/JTaisey389/storefront/issues"
   },
-  "homepage": "https://github.com/JTaisey389/storefront#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,5 +29,17 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "web-vitals": "^2.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
